# mjollnir

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  nightly.yml
benchmarks/: test_bench.py
docs/: architecture.md  changelog.md  examples.md  index.md  roadmap-v0.2.md
docs/design/: neural-calibration.md
docs/guide/: backtesting.md  calibration.md  multi-agent.md  params-scenarios.md  rl-substrate.md  stability.md
docs/reference/: backtest.md  calibration.md  cross_asset.md  generator.md  jax.md  params.md  processes.md  scenarios.md  simulations.md  surface.md  synthetic.md  synthetic_data.md
examples/: deep_hedging_rollout.py  heston_workflow.py  multi_agent_impact.py
src/mjollnir/: __init__.py  backtest.py  cli.py  generator.py  params.py  scenarios.py  surface.py
src/mjollnir/calibration/: __init__.py  joint_pq.py
src/mjollnir/calibration/cli/: __init__.py  build_universes.py  calibrate.py  train_npe.py
src/mjollnir/calibration/cross_asset/: __init__.py  dcc.py  factor_model.py  pooling.py
src/mjollnir/calibration/marketdata/: __init__.py  binance_fetcher.py  coingecko_fetcher.py  crypto_fetcher.py  data_provider.py  gemini_fetcher.py  kraken_fetcher.py  price_store.py  synthetic_crypto.py  universe.py  yfinance_fetcher.py
src/mjollnir/calibration/physical/: __init__.py  as_calibration.py  correlation.py  data_utils.py  gbm_calibrator.py  heston_particle_filter.py  heston_qmle.py  merton_calibrator.py  multi_asset_pipeline.py  ou_calibrator.py  regime_switching_calibrator.py  rough_bergomi_calibrator.py  rough_bergomi_particle_filter.py  volatility.py
src/mjollnir/calibration/physical/batched/: __init__.py  common.py  garch.py  gbm.py  heston_qmle.py  merton.py  ou.py  rbergomi.py
src/mjollnir/calibration/physical/batched/npe/: __init__.py  estimator.py  model.py  simulate.py  train.py
src/mjollnir/calibration/pipeline/: __init__.py  registry.py  results_store.py  runner.py
src/mjollnir/calibration/risk_neutral/: __init__.py  cf_calibrator.py  dupire_calibrator.py  gradient_heston.py  heston_calibrator.py  regime_switching_heston_calibrator.py  sabr_calibrator.py  svi.py
src/mjollnir/derivatives/: __init__.py  american.py  base.py  multi_asset.py  path_dependent.py  rates.py
src/mjollnir/jax/: __init__.py  _impact.py  _lsmc.py  _market.py  _pricing.py  _signature.py
src/mjollnir/pricer/: __init__.py  _jax_fd_pricer.py  _jax_fe_pricer.py  _jax_fourier_pricer.py  _jax_iv.py  _jax_mgf_pricer.py  _pricer_runtime.py  analytical.py  bachelier_pricer.py  base.py  bates_mgf_pricer.py  finite_difference.py  finite_element.py  fourier.py  heston_mgf_pricer.py  merton_mgf_pricer.py  monte_carlo.py
src/mjollnir/processes/: Levy.py  __init__.py  _jax_backend.py  _jax_kernels.py  _jax_qe.py  _jax_utils.py  _process_defs.py  _structured_inputs.py  bachelier.py  base.py  bates.py  cev.py  four_half.py  gbm.py  heston.py  jump_diffusion.py  kou.py  merton.py  multi_asset_gbm.py  nig.py  ornstein_uhlenbeck.py  regime_switching.py  regime_switching_merton.py  rough_bergomi.py  sabr.py  short_rate.py  stochastic_local_vol.py  three_half.py  variance_gamma.py
src/mjollnir/simulations/: __init__.py  contracts.py  heston_cache.py  heston_env.py  merton_env.py  renderer.py  rough_bergomi_env.py
src/mjollnir/synthetic/: __init__.py  synthetic_equity.py  synthetic_merton_equity.py
src/mjollnir/synthetic_data/: __init__.py  data_provider.py  synthetic_equity.py  synthetic_merton_equity.py
tests/: test_batched_merton.py  test_cli.py  test_cross_asset.py  test_examples.py  test_generator.py  test_gradient_heston.py  test_impact_market.py  test_kernel_family_golden.py  test_lsmc.py  test_params_scenarios.py  test_parity_golden.py  test_properties.py  test_rl_envs.py  test_rng_isolation.py  test_signature.py  test_surface_backtest.py
