[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mjollnir"
version = "0.1.0"
description = "Counterfactual market simulation and backtesting for RL research, with market-model calibration pipelines"
readme = "README.md"
requires-python = ">=3.11"  # floor set by jax 0.9 / flax (both >=3.11)
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Yunian Pan", email = "yp1170@nyu.edu"}
]
keywords = [
    "options", "derivatives", "quantitative-finance", "stochastic-processes",
    "market-simulation", "calibration", "jax", "reinforcement-learning", "deep-hedging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# flax/optax are core dependencies (used by the NPE calibrator, not only RL
# consumers); gymnasium is required by the simulation environments. torch is
# intentionally not a dependency.
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "jax>=0.9.0,<0.10",
    "jaxlib>=0.9.0,<0.10",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "gymnasium>=0.29.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "zarr>=2.16.0",
    "matplotlib>=3.7.0",
    # market-data fetchers (candidate to split into a [data] extra with lazy imports)
    "yfinance>=0.2.28",
    "pandas-datareader>=0.10.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.4.0",
]
# JAX device backends (install exactly one to match your hardware).
cuda = ["jax[cuda12]>=0.9.0,<0.10"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
metal = ["jax-metal>=0.1.0"]

[project.urls]
Homepage = "https://github.com/unionpan/mjollnir"
Documentation = "https://unionpan.github.io/mjollnir/"
Repository = "https://github.com/unionpan/mjollnir"
Changelog = "https://github.com/unionpan/mjollnir/blob/main/CHANGELOG.md"

[project.scripts]
mjollnir-build-universes = "mjollnir.calibration.cli.build_universes:main"
mjollnir-calibrate = "mjollnir.calibration.cli.calibrate:main"
mjollnir-train-npe = "mjollnir.calibration.cli.train_npe:main"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "RUF"]
ignore = [
    "E501",   # long lines: scientific formulas read better unwrapped
    "E741",   # ambiguous single-letter names: standard math notation (l, I) in kernels
    "B008",   # function call in default: used deliberately for frozen param defaults
    "RUF001", "RUF002", "RUF003",  # Greek letters / math glyphs in docstrings are deliberate
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]        # re-export surfaces
"src/mjollnir/pricer/__init__.py" = ["F403", "F405"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning:mjollnir.*",  # our own deprecations are bugs
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mjollnir = ["py.typed", "**/*.json", "**/*.yaml", "**/*.yml"]
